MEN-5410: Append distribution and release to the package version
The original approach had the limitation that the produced deb packages
will have the same version (and name) on different platforms, which will
error to update the repository (all distributions in our repo share the
same pool).

Removing the tentative directory hierarchy also helped with the unknown
on publishing, the acceptance tests and reduces risk on the changes to
be made for the reprepro wrapper script.

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -332,29 +332,27 @@ test:acceptance:
       libffi-dev libc-dev python3-dev bash musl-dev rust cargo
     - cd tests
     - pip3 install -r requirements.txt
-    - OPENSOURCE_PACKAGES_PATH=${CI_PROJECT_DIR}/output/opensource/debian/buster/
-    - COMMERCIAL_PACKAGES_PATH=${CI_PROJECT_DIR}/output/opensource/debian/buster/
     - python3 -m pytest -v
       --mender-client-version $MENDER_VERSION
-      --mender-client-deb-version $(cat ${OPENSOURCE_PACKAGES_PATH}/mender-client-deb-version)
+      --mender-client-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/mender-client-deb-version)
       --mender-connect-version $MENDER_CONNECT_VERSION
-      --mender-connect-deb-version $(cat ${OPENSOURCE_PACKAGES_PATH}/mender-connect-deb-version)
+      --mender-connect-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/mender-connect-deb-version)
       --mender-configure-version $MENDER_CONFIGURE_VERSION
-      --mender-configure-deb-version $(cat ${OPENSOURCE_PACKAGES_PATH}/mender-configure-deb-version)
+      --mender-configure-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/mender-configure-deb-version)
     - |-
-        if [ -f ${COMMERCIAL_PACKAGES_PATH}/mender-gateway-deb-version ] && \
-           [ -f ${COMMERCIAL_PACKAGES_PATH}/mender-monitor-deb-version ]; then
+        if [ -f ${CI_PROJECT_DIR}/output/commercial/mender-gateway-deb-version ] && \
+           [ -f ${CI_PROJECT_DIR}/output/commercial/mender-monitor-deb-version ]; then
           python3 -m pytest -v \
             --mender-client-version $MENDER_VERSION \
-            --mender-client-deb-version $(cat ${OPENSOURCE_PACKAGES_PATH}/mender-client-deb-version) \
+            --mender-client-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/mender-client-deb-version) \
             --mender-connect-version $MENDER_CONNECT_VERSION \
-            --mender-connect-deb-version $(cat ${OPENSOURCE_PACKAGES_PATH}/mender-connect-deb-version) \
+            --mender-connect-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/mender-connect-deb-version) \
             --mender-configure-version $MENDER_CONFIGURE_VERSION \
-            --mender-configure-deb-version $(cat ${OPENSOURCE_PACKAGES_PATH}/mender-configure-deb-version) \
+            --mender-configure-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/mender-configure-deb-version) \
             --mender-gateway-version $MENDER_GATEWAY_VERSION \
-            --mender-gateway-deb-version $(cat ${COMMERCIAL_PACKAGES_PATH}/mender-gateway-deb-version) \
+            --mender-gateway-deb-version $(cat ${CI_PROJECT_DIR}/output/commercial/mender-gateway-deb-version) \
             --mender-monitor-version $MENDER_MONITOR_VERSION \
-            --mender-monitor-deb-version $(cat ${COMMERCIAL_PACKAGES_PATH}/mender-monitor-deb-version) \
+            --mender-monitor-deb-version $(cat ${CI_PROJECT_DIR}/output/commercial/mender-monitor-deb-version) \
             --commercial-tests
         fi
 
@@ -398,7 +396,6 @@ test:acceptance:
   script:
     # Upload files: first .buildinfo and .deb, then .changes
     - for file in $(find output/opensource -name *.buildinfo -o -name *.deb); do
-    # TODO: does s3 cp recreate the path?
     -   aws s3 cp $file s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/
     - done
     - for file in $(find output/opensource -name *.changes); do
@@ -426,17 +423,17 @@ publish:s3:apt-repo:automatic:
     - build:packages:debian:buster:arm64
   before_script:
     - apt update && apt install -yyq awscli
-    - deb_version=$(cat output/opensource/debian/buster/mender-client-deb-version)
+    - deb_version=$(cat output/opensource/mender-client-deb-version)
   script:
     - echo "Publishing ${MENDER_VERSION} packages to S3"
     # For master packages, the Debian version is "0.0~git[iso-date].[git-hash]-1" and we make a copy named "master" for GUI to use
     - for arch in amd64 arm64 armhf; do
-        aws s3 cp output/opensource/debian/buster/mender-client_${deb_version}_${arch}.deb
+        aws s3 cp output/opensource/mender-client_${deb_version}_${arch}.deb
           s3://${S3_BUCKET_NAME}/${MENDER_VERSION}/${S3_BUCKET_SUBPATH}/${arch}/mender-client_${deb_version}_${arch}.deb;
         aws s3api put-object-acl --acl public-read --bucket ${S3_BUCKET_NAME}
           --key ${MENDER_VERSION}/${S3_BUCKET_SUBPATH}/${arch}/mender-client_${deb_version}_${arch}.deb;
         if [ "${MENDER_VERSION}" == "master" ]; then
-          aws s3 cp output/opensource/debian/buster/mender-client_${deb_version}_${arch}.deb
+          aws s3 cp output/opensource/mender-client_${deb_version}_${arch}.deb
             s3://${S3_BUCKET_NAME}/${MENDER_VERSION}/${S3_BUCKET_SUBPATH}/${arch}/mender-client_master-1_${arch}.deb;
           aws s3api put-object-acl --acl public-read --bucket ${S3_BUCKET_NAME}
             --key ${MENDER_VERSION}/${S3_BUCKET_SUBPATH}/${arch}/mender-client_master-1_${arch}.deb;
@@ -493,7 +490,6 @@ publish:production:s3:scripts:install-mender-sh:
     - apt update && apt install -yyq awscli
     - *publish_helper_functions
   script:
-    # TODO: fix
     - echo "Publishing mender-monitor version ${MENDER_MONITOR_VERSION} to s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/${MENDER_MONITOR_VERSION}/"
     - aws s3 cp output/commercial/mender-monitor_*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/${MENDER_MONITOR_VERSION}/
     - echo "Publishing mender-monitor-demo version ${MENDER_MONITOR_VERSION} to s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/${MENDER_MONITOR_VERSION}/"
@@ -532,7 +528,6 @@ publish:s3:mender-monitor:automatic:
     - apt update && apt install -yyq awscli
     - *publish_helper_functions
   script:
-    # TODO: fix
     - echo "Publishing mender-gateway version ${MENDER_GATEWAY_VERSION} to s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_GATEWAY}/${MENDER_GATEWAY_VERSION}/"
     - aws s3 cp output/commercial/ s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_GATEWAY}/${MENDER_GATEWAY_VERSION}/ --recursive --exclude "*" --include "mender-gateway*.deb"
     # Make copies in known destinations to be consumed by get.mender.io script:
