Revert "debian-2.4.x: Add libffi6 as a depency for the client"
This reverts commit fac550a8ba78f4652ff24a865bf66ea4d216a986.

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/recipes/mender-client/debian-2.4.x/control
+++ b/recipes/mender-client/debian-2.4.x/control
@@ -8,6 +8,6 @@ Build-Depends: debhelper (>= 9)
 Package: mender-client
 Conflicts: mender
 Architecture: any
-Depends: libc6 (>= 2.12), libglib2.0-0 (>=2.50), liblzma5 (>= 5.1), libssl1.1 (>= 1.1), libffi6 (>= 3.2)
+Depends: libc6 (>= 2.12), libglib2.0-0 (>=2.50), liblzma5 (>= 5.1), libssl1.1 (>= 1.1)
 Description: Mender client
  Mender is an open source over-the-air (OTA) software updater for embedded Linux devices.
